iac/services/proxy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxy
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8443
